--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.0.0",
     "@nuxt/ui": "^0.1.1",
-    "@unocss/nuxt": "^0.34.0",
-    "nuxt": "3.0.0-rc.3",
-    "@nuxt/content-edge": "2.0.0-27555461.4c365fc"
+    "@nuxtjs/color-mode": "^3.0.3",
+    "@unocss/nuxt": "^0.34.1",
+    "nuxt": "3.0.0-rc.3"
   }
 }
