--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@nuxtjs/color-mode": "^3.0.3",
     "@unocss/nuxt": "^0.34.1",
     "nuxt": "3.0.0-rc.3"
+  },
+  "dependencies": {
+    "@fontsource/lobster": "^4.5.8",
+    "@fontsource/molle": "^4.5.7",
+    "@vueuse/motion": "2.0.0-beta.18"
   }
 }
