--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "3.0.0-rc.3"
   },
   "dependencies": {
+    "@fontsource/cabin": "^4.5.6",
     "@fontsource/lobster": "^4.5.8",
     "@fontsource/molle": "^4.5.7",
     "@vueuse/motion": "2.0.0-beta.18"
