--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@iconify-json/vscode-icons": "^1.1.7",
     "@nuxt/content": "^2.0.0",
     "@nuxt/ui": "^0.1.1",
     "@nuxtjs/color-mode": "^3.0.3",
@@ -17,6 +18,7 @@
     "@fontsource/cabin": "^4.5.6",
     "@fontsource/lobster": "^4.5.8",
     "@fontsource/molle": "^4.5.7",
+    "@unocss/runtime": "^0.43.0",
     "@vueuse/motion": "2.0.0-beta.18"
   }
 }
